--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
     "compilerOptions": {
         "target": "ES2017",
-        "lib": [
-            "dom",
-            "dom.iterable",
-            "esnext"
-        ],
+        "lib": ["dom", "dom.iterable", "esnext"],
         "allowJs": true,
         "skipLibCheck": true,
         "strict": true,
@@ -21,48 +17,20 @@
         "incremental": true,
         "baseUrl": ".",
         "paths": {
-            "@/*": [
-                "./*"
-            ],
-            "@app/*": [
-                "app/*"
-            ],
-            "@src/*": [
-                "src/*"
-            ],
-            "@amplify/*": [
-                "amplify/*"
-            ],
-            "@components/*": [
-                "src/components/*"
-            ],
-            "@hooks/*": [
-                "src/hooks/*"
-            ],
-            "@context/*": [
-                "src/context/*"
-            ],
-            "@utils/*": [
-                "src/utils/*"
-            ],
-            "@assets/*": [
-                "src/assets/*"
-            ],
-            "@services/*": [
-                "src/services/*"
-            ],
-            "@myTypes/*": [
-                "src/types/*"
-            ],
-            "@entities/*": [
-                "src/entities/*"
-            ],
-            "@public/*": [
-                "public/*"
-            ],
-            "@test/*": [
-                "tests/*"
-            ]
+            "@/*": ["./*"],
+            "@app/*": ["app/*"],
+            "@src/*": ["src/*"],
+            "@amplify/*": ["amplify/*"],
+            "@components/*": ["src/components/*"],
+            "@hooks/*": ["src/hooks/*"],
+            "@context/*": ["src/context/*"],
+            "@utils/*": ["src/utils/*"],
+            "@assets/*": ["src/assets/*"],
+            "@services/*": ["src/services/*"],
+            "@myTypes/*": ["src/types/*"],
+            "@entities/*": ["src/entities/*"],
+            "@public/*": ["public/*"],
+            "@test/*": ["tests/*"]
         },
         "plugins": [
             {
